2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_status_icon_position_menu and GtkMenuPositionFunc bindings,
	fixes bug 563457

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valagobjectmodule.vala:

	Report error when using construct blocks in non-GObject classes

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_container_get_children binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Add GTK_WIDGET_* bindings, patch by Víctor Manuel Jáquez Leal,
	fixes bug 561341

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* tests/testrunner.sh:

	Fix make check of uninstalled vala, based on patch by Götz Waschk,
	fixes bug 562951

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* tests/testrunner.sh:

	Fix order of commandline arguments passed to C compiler,
	patch by Alexander Bokovoy

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/unique-1.0/:

	Fix unique_app_new* bindings, patch by Michael Terry,
	fixes bug 564064

	* vapi/unique-1.0.vapi: regenerated

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/:

	Fix g_themed_icon_new_from_names binding, patch by Michael Terry,
	fixes bug 564062

	* vapi/gio-2.0.vapi: regenerated

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_main_current_source binding, patch by Zeeshan Ali Khattak,
	fixes bug 563349

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Various ownership fixes, patch by Evan Nemerson, fixes bug 553032

	* vapi/gstreamer-0.10.vapi: regenerated

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add fileno, ferror, and clearerr bindings and fix a few other
	bindings, patch by Evan Nemerson, fixes bug 547921 and bug 558206

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:
