@@ -1,5 +1,12 @@
 2008-12-16  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodebasemodule.vala:
+
+	Report error when using construct properties in non-GObject
+	classes, fixes bug 541728
+
+2008-12-16  Jürg Billeter  <j@bitron.ch>
+
 	* vapi/packages/gtk+-2.0/:
 
 	Fix gtk_status_icon_position_menu and GtkMenuPositionFunc bindings,
